fix: add horizontal scrolling to table

--- a/public/themes/default.css
+++ b/public/themes/default.css
@@ -178,7 +178,10 @@ blockquote {
 }
 
 table {
+	display: block;
 	width: 100%;
+	overflow-x: auto;
+	-webkit-overflow-scrolling: touch;
 	border-collapse: collapse;
 	margin-bottom: 1.5em;
 	font-size: 0.95em;
@@ -189,6 +192,7 @@ td {
 	padding: 10px;
 	border-bottom: 1px solid var(--border-subtle);
 	text-align: left;
+	white-space: nowrap;
 }
 
 th {
